# Macro_Workshop

./: ast.txt  main.rs  rustc-ice-2024-08-26T00_24_52-55111.txt  rustc-ice-2024-08-26T00_24_54-55145.txt  rustc-ice-2024-08-26T00_24_55-55178.txt  rustc-ice-2024-08-26T00_25_02-55225.txt  rustc-ice-2024-08-26T00_25_02-55226.txt  rustc-ice-2024-08-26T00_25_02-55227.txt  rustc-ice-2024-08-26T00_25_03-55267.txt  rustc-ice-2024-08-26T00_25_05-55303.txt  rustc-ice-2024-08-26T00_25_20-55388.txt
builder/: Cargo.toml
builder/src/: bkup-lib  lib.rs
builder/tests/: 01-parse.rs
debug/: Cargo.toml
debug/src/: #lib.rs#  bkup.rs  lib.rs
debug/tests/: .#03-custom-format.rs  .#08-escape-hatch.rs  03-custom-format.rs  04-type-parameter.rs  05-phantom-data.rs  06-bound-trouble.rs  07-associated-type.rs
seq/: Cargo.toml  bkup
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: #lib.rs#  bkup  broken_lib  lib.rs
sorted/tests/: .#06-pattern-path.rs  02-not-enum.rs  05-match-expr.rs  05-match-expr.stderr  progress.rs
