[package]
name = "derive_debug"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "*", features = ["diff"] }

[dependencies]
syn = { version = "2.0.74", features = ["extra-traits", "full", "visit-mut"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
expand = "*"
